---
source: common/nodejs-utils/src/config.rs
---
- Debug Info:
  - TOML parse error at line 1, column 12
      |
    1 | [[artifacts
      |            ^
    invalid table header
    expected `.`, `]]`

! Failed to parse project.toml
!
! This buildpack reads configuration from `project.toml` to complete the build but this file isn't a valid TOML file.
!
! Suggestions:
! - Ensure the file follows the TOML format described at https://toml.io/en/v1.0.0
!
! Use the debug information above to troubleshoot and retry your build.
